# opencv_cam_distance_measurer

./: README.md  pyproject.toml
src/: face_dist_algo.py  face_dist_webcam.py  facial_distance_draw.py  qr_code_dist_webcam.py  qr_code_distance_algo.py  qr_code_distance_draw.py
src/opencv_dist_measurer/: detector_algorithms.py  dist_main.py  distance_algorithms.py  distance_draw.py  drawer.py  face_dist_algo.py  face_dist_webcam.py  facial_distance_draw.py  qr_code_dist_webcam.py  qr_code_distance_draw.py
test/: test_detector.py
