[tool.poetry]
name = "opencv_cam_distance_measurer"
version = "0.1.0"
description = ""
authors = ["Kan Kawabata <kkawabat@asu.edu>"]
packages = [{include = "opencv_dist_measurer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
opencv-contrib-python = "^4.8.0.74"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
